--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,56 @@
 ---
+language: python
+python: '2.7'
+
+# Spin off separate builds for each of the following versions of Ansible
+env:
+  - ANSIBLE_VERSION=2.0.2
+  - ANSIBLE_VERSION=2.2.0
+
+# Require the standard build environment
 sudo: required
+
+# Require Ubuntu 14.04
 dist: trusty
 
-language: generic
+# Require Docker
+services:
+  - docker
+
+# Cache Ansible and Molecule to speed things up
+cache:
+  - pip
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y python python-pip
+  - sudo apt-get install -o Dpkg::Options::='--force-confold' --force-yes -y docker-engine
 
 install:
-  # Install ansible
-  - sudo pip install ansible
+  # Install Ansible
+  - pip install "ansible~=$ANSIBLE_VERSION"
 
-  # Check ansible version
+  # Install Python API for Docker (required by Molecule Docker driver)
+  - pip install docker
+
+  # Install Molecule
+  - pip install molecule
+
+  # Check Ansible version
   - ansible --version
 
-  # Create ansible.cfg with correct roles_path
-  - printf '[defaults]\nroles_path=../' >ansible.cfg
+  # Check Molecule version
+  - molecule --version
 
-  # Install role dependencies
-  # ...
+  # Build the Docker images
+  - molecule create
+  - molecule destroy
 
 script:
-  # Basic role syntax check
-  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+  - molecule test
 
-  # Run the role/playbook with ansible-playbook
-  - ansible-playbook tests/test.yml -i tests/inventory --connection=local --become
-
-  # Run the role/playbook again, checking to make sure it's idempotent
-  - >
-    ansible-playbook -i tests/inventory tests/test.yml --connection=local --become
-    | tee /tmp/output.txt; grep -q 'changed=0.*failed=0' /tmp/output.txt &&
-    (echo 'Idempotence test: pass' && exit 0)
-    || (echo 'Idempotence test: fail' && exit 1)
-
-  # Playbook specific tests
-  # ...
+branches:
+  only:
+    - master
 
 notifications:
-  webhooks: https://galaxy.ansible.com/api/v1/notifications/
+webhooks: https://galaxy.ansible.com/api/v1/notifications/
