--- a/molecule.yml
+++ b/molecule.yml
@@ -1,5 +1,6 @@
 ---
 ansible:
+  inventory_file: tests/inventory
   playbook: tests/test.yml
 
 dependency:
@@ -13,6 +14,13 @@ docker:
   - name: ansible-role-tlp-01
     image: ubuntu
     image_version: '16.04'
-
   - name: ansible-role-tlp-02
-    image: archlinux
+    image: finalduty/archlinux
+    image_version: latest
+    dockerfile: tests/Dockerfile-ArchLinux
+    command: /bin/bash
+    ansible_groups:
+      - archlinux
+
+verifier:
+    name: testinfra
