--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,18 @@
 ---
 language: python
-python: '2.7'
+python: "2.7"
 
 # Spin off separate builds for each of the following versions of Ansible
 env:
-  - ANSIBLE_VERSION=2.2.0
+  - ANSIBLE_VERSION=2.2
+  - ANSIBLE_VERSION=2.3
 
 # Require the standard build environment
 sudo: required
 
-# Require Ubuntu 14.04
-dist: trusty
-
 # Require Docker
 services:
   - docker
-
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -o Dpkg::Options::='--force-confold' --force-yes -y docker-engine
 
 # Cache Ansible and Molecule to speed things up
 cache:
@@ -48,4 +42,4 @@ script:
   - molecule test
 
 notifications:
-webhooks: https://galaxy.ansible.com/api/v1/notifications/
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
