--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -24,7 +24,7 @@ platforms:
     privileged: true
   - name: ansible-fedora
     image: fedora
-    image_version: latest
+    image_version: 26
     command: /usr/lib/systemd/systemd
     privileged: true
 
