--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,13 +1,7 @@
 ---
 
-- name: Debian | installing tlp
-  apt: "name={{ item }} state=present"
+- name: Install tlp
+  package: "name={{ item }} state=present"
   with_items: "{{ tlp_packages }}"
-  when: ansible_os_family == 'Debian'
-
-- name: Archlinux | installing tlp
-  pacman: "name={{ item }} state=present"
-  with_items: "{{ tlp_packages }}"
-  when: ansible_os_family == 'Archlinux'
 
 # vim: set ts=2 sw=2:
