--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python: "2.7"
 env:
   - ANSIBLE_VERSION=2.2
   - ANSIBLE_VERSION=2.3
+  - ANSIBLE_VERSION=2.4
 
 # Require the standard build environment
 sudo: required
