--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ env:
   - ANSIBLE_VERSION=2.2
   - ANSIBLE_VERSION=2.3
   - ANSIBLE_VERSION=2.4
+  - ANSIBLE_VERSION=2.5
+  - ANSIBLE_VERSION=2.6
+  - ANSIBLE_VERSION=2.7
 
 # Require the standard build environment
 sudo: required
