--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,12 +12,12 @@ provisioner:
         tlp_enable: false
 
 platforms:
+  - name: ansible-ubuntu-16-04
+    image: ubuntu:16.04
   - name: ansible-ubuntu-lts
-    image: ubuntu
-    image_version: '16.04'
-  - name: ansible-ubuntu-1704
-    image: ubuntu
-    image_version: '17.04'
+    image: ubuntu:18.04
+  - name: ansible-ubuntu-18-10
+    image: ubuntu:18.10
   - name: ansible-arch
     image: archimg/base
     image_version: full
