--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,6 @@ install:
   # Install Python API for Docker (required by Molecule Docker driver)
   - pip install docker
 
-  # Lock docker-py to 2.7 to avoid crashes when creating docker images
-  - pip install "docker~=2.7"
-
   # Install Molecule
   - pip install molecule
 
@@ -41,12 +38,12 @@ install:
   # Check Molecule version
   - molecule --version
 
-  # Build the Docker images
-  - molecule create
-  - molecule destroy
+# Build the Docker images
+  - molecule --debug create
+  - molecule --debug destroy
 
 script:
-  - molecule test
+  - molecule --debug test
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
