--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,6 +3,8 @@ dependency:
   name: galaxy
 driver:
   name: docker
+ansible:
+  verbose: vv
 
 provisioner:
   name: ansible
@@ -12,24 +14,22 @@ provisioner:
         tlp_enable: false
 
 platforms:
-  - name: ansible-ubuntu-16-04
+  - name: ansible-ubuntu-16-04-lts
     image: ubuntu:16.04
-  - name: ansible-ubuntu-lts
+  - name: ansible-ubuntu-18-04-lts
     image: ubuntu:18.04
-  - name: ansible-ubuntu-18-10
-    image: ubuntu:18.10
+  - name: ansible-ubuntu-lts
+    image: ubuntu:20.04
+  - name: ansible-debian
+    image: debian:latest
   - name: ansible-arch
     image: archlinux/base:latest
-    command: /lib/systemd/systemd
+    command: /usr/lib/systemd/systemd
     privileged: true
   - name: ansible-fedora
     image: fedora:latest
-    command: /usr/lib/systemd/systemd
-    privileged: true
 
 scenario:
   name: default
 verifier:
-  name: testinfra
-  lint:
-    name: flake8
+  name: ansible
