--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,14 +4,13 @@ galaxy_info:
   description: Installs TLP
   company:
   license: BSD
-  min_ansible_version: 1.9
+  min_ansible_version: 2.5
   github_branch: master
   platforms:
     - name: Ubuntu
-      versions:
-        - trusty
-        - xenial
+    - name: Debian
     - name: Archlinux
+    - name: Fedora
   galaxy_tags:
     - system
 dependencies: []
